syntax = "proto3";

package user_service;

option go_package = "genproto/user_service";

import "google/protobuf/struct.proto";

message HobbyPrimaryKey {
    string id = 1;
}

message Hobby {
    string id = 1;
    string name = 2;
    string created_at = 5;
    string updated_at = 6;
}

message CreateHobby {
    string name = 1;

}

message UpdateHobby {
    string id = 1;
    string name = 2;
 
}
message UpdatePatchHobby {
    string id = 1;
    google.protobuf.Struct fields = 2;
}

message GetListHobbyRequest {
    int64 offset = 1;
    int64 limit = 2;
    string search = 3;
    string type = 4;
}

message GetListHobbyResponse {
    int64 count = 1;
    repeated Hobby hobbies = 2;
}
